src/sass/layout/_now.scss
.block.block-hero.block-hero-contact.block-hero-now ul {
  max-width: 65rem;
  margin-left: auto;
  margin-right: auto;
  font-weight: 300;
  margin-top: 5rem;
  text-align: left;
  opacity: 1 !important;

  li {
    font-size: 2rem;
    line-height: 1.36;
    margin-bottom: 3rem;
  }

  li:last-child {
    margin-bottom: 0;
  }

  li.updated {
    font-size: 1.6rem;
    opacity: .6;
    list-style: none;
  }
}

.now .block-my-things {
  display: none;
}

.block.block-hero.block-hero-now,
body .block.block-hero-bg-static {
  background-position: center 40rem;
  padding-bottom: 30rem;
  min-height: 100vh;
  height: auto;

  @media (min-width: 2900px) {
    background-position: center -50rem;
  }

  @media (max-width: 1650px) {
    background-position: center 90rem;
  }

  @media (max-width: 900px) {
    background-position: center 130rem;
  }

  @media (max-width: 500px) {
    background-position: center 140rem;
  }
}

